# STL-to-ASCII

./: .gitignore  README.md  package-lock.json  package.json
public/: client.js  index.html  style.css
server/: server.js  stlToAscii.js
server/haskell/stl-ascii-server/: stl-ascii-server.cabal
server/haskell/stl-ascii-server/app/: Main.hs  STLProcessor.hs
