cabal-version:      3.0
name:               stl-ascii-server
version:            0.1.0.0
license:            BSD-3-Clause

executable stl-ascii-server
    main-is:          Main.hs
    other-modules:    STLProcessor
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    base >= 4.17.2.0 && < 4.18,
                     scotty,
                     wai-cors,
                     wai-extra,
                     wai-middleware-static,
                     bytestring,
                     vector,
                     aeson,
                     filepath,
                     linear,
                     text,
                     http-types,
                     warp,
                     binary
    ghc-options:      -Wall -threaded